fixed flex issue in tabs

--- a/styles/components/tabs.less
+++ b/styles/components/tabs.less
@@ -72,7 +72,7 @@
       position: relative;
       z-index: 1;
       &:before {
-        display: flex;
+        display: inline-flex;
         justify-content: center;
         align-items: center;
         line-height: 1;
